src/assets/scss/components/_trading-notification.scss
.trading-notification{
  position: absolute;
  width: 100%;
  padding: 8px;
  bottom: 0px;
  /*--- modificators start ---*/
  &--success{
    background-color: $green;
  }
  &--error{
    background-color: $red;
  }
  /*--- modificators end ---*/
  /*--- elements start ---*/
  &__close{
    display: none;
    position: absolute;
    right: 16px;
    top: 16px;
    width: 8px;
    height: 8px;
    &:hover{
      cursor: pointer;
    }
    svg{
      vertical-align: top;
      fill: #000;
    }
  }
  &__content{
    display: flex;
    align-items: center;
    justify-content: center;
  }
  &__icon{
    width: 100%;
    max-width: 24px;
    height: 24px;
    margin-right: 8px;
    svg{
      width: 100%;
      .icon-center{
        fill:#fff;
      }
      .icon-circle{
        stroke: #fff;
      }
    }
  }
  &__text{
    p{
      display: none;
    }
  }
  /*--- elements end ---*/
}
/*--- media start ---*/
@media (min-width:600px) {}
@media (min-width:900px) {}
@media (min-width:1200px) {
  .trading-notification{
    width: auto;
    min-width: 320px;
    padding: 16px;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    top: 50%;
    left: 50%;
    bottom: auto;
    transform: translate(-50%,-50%);
    box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
    background: linear-gradient(to bottom, #F5F5F5 0%, #FDFDFD 50%, #F5F5F5 100%);
    &__close{
      display: block;
    }
    &__icon{
      width: 100%;
      max-width: 37px;
      height: 37px;
      &--success{
        svg{
          .icon-center{
            fill:$green;
          }
          .icon-circle{
            stroke: $green;
          }
        }
      }
      &--error{
        svg{
          .icon-center{
            fill:$red;
          }
          .icon-circle{
            stroke: $red;
          }
        }
      }
    }
    &__content{
      margin-top: 14px;
      margin-bottom: 14px;
      align-items: center;
      justify-content: flex-start;
    }
    &__text{
      line-height: 21px;
      p{
        display: block;
        color: $grey;
      }
    }
  }
}
/*--- media end ---*/

/*--- DARK THEME START---*/
.dark-theme{
  .trading-notification{

  }
}
@media (min-width:1200px) {
  .dark-theme{
    .trading-notification{
      background: #264479;
      border: 1px solid $darker-blue;
      &__close{
        svg{
          fill: #fff;
        }
      }
      &__text{
        p{
          color: inherit;
        }
      }

    }
  }
}
/*--- DARK THEME END---*/

